--- a/TauTau/DYSignalRegion/DiParticle_info.in
+++ b/TauTau/DYSignalRegion/DiParticle_info.in
@@ -32,7 +32,7 @@ CosDphiPtAndMetCut  -1.00 -0.90
 DiscrByCosDphiLeadPtAndMet false 
 CosDphiLeadPtAndMetCut -1.00 -0.90
 
-DiscrByAbsCosDphiLeadPtandMet   false
+DiscrByAbsCosDphiLeadPtandMet   true
 AbsCosDphiLeadPtAndMetCut       0.90  1.00
 
 DiscrByMtLeadPtAndMet false
